# twitch-adblock-player

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
desktop/: Cargo.toml  tauri.conf.json
desktop/capabilities/: default.json
desktop/icons/: icon.icns
desktop/scripts/: generate-ico.mjs
desktop/src/: main.rs  settings.rs
desktop/tests/: readme-screenshot.mjs  ui-smoke.mjs
desktop/tests/fixtures/readme/: README.md
desktop/ui/: app.js  index.html  styles.css
relay/: worker.js  wrangler.toml
src/: auth.rs  chat.rs  helix.rs  lib.rs  main.rs  playback.rs  playlist.rs  tui.rs
