[package]
name = "twitch-adblock"
version = "0.3.0"
edition = "2021"
description = "Watch Twitch live streams ad-free with a TUI: followed-live list, chat, and SSAI ad stripping."
license = "MIT"

[workspace]
members = ["desktop"]
default-members = ["desktop"]
resolver = "2"

[dependencies]
anyhow = "1"
axum = "0.7"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "socks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "net", "time", "sync", "io-util"] }
tower-http = { version = "0.6", features = ["cors"] }
# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
# chat (IRC over WebSocket)
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
httparse = "1"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
