[package]
name = "twitch-adblock-desktop"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["sync"] }
twitch-adblock = { path = ".." }
